<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:asp="http://schemas.android.com/apk/res-auto">

    <androidx.preference.PreferenceCategory android:title="Network Type">
        <androidx.preference.ListPreference
            android:defaultValue="0"
            android:entries="@array/networkList"
            android:entryValues="@array/networkValues"
            android:key="@string/pref_key_network_type"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="Pick your network" />
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory android:title="Device State:">
        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="@string/pref_key_device_idle"
            android:summary="@string/turn_on_off"
            android:title="Device Idle" />

        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="@string/pref_key_device_charging"
            android:summary="@string/turn_on_off"
            android:title="Device Charging" />
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory android:title="Override deadline:">
        <androidx.preference.SeekBarPreference
            android:key="@string/pref_key_override_deadline"
            android:summary="Slide to select"
            android:defaultValue="@integer/seek_bar_default"
            android:max="@integer/seek_bar_max"
            asp:min="@integer/seek_bar_min" />
    </androidx.preference.PreferenceCategory>

</androidx.preference.PreferenceScreen>