<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/gutterSpaceHalf">

    <TextView
        android:id="@+id/transaction_summary_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/gutterSpaceHalf"
        android:layout_marginTop="@dimen/gutterSpaceHalf"
        android:text="@string/transaction_summary"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/credit_card_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transaction_summary_text"
        app:srcCompat="@drawable/ic_credit_card"
        android:tint="@color/colorGreen"
        android:contentDescription="@string/credit_card_image"/>

    <TextView
        android:id="@+id/income_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/gutterSpaceHalf"
        android:layout_marginTop="@dimen/gutterSpace"
        android:text="@string/income"
        app:layout_constraintStart_toEndOf="@+id/credit_card_image"
        app:layout_constraintTop_toBottomOf="@+id/transaction_summary_text" />

    <TextView
        android:id="@+id/expenses_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/gutterSpaceHalf"
        android:layout_marginTop="@dimen/gutterSpaceHalf"
        android:text="@string/expenses"
        app:layout_constraintStart_toEndOf="@+id/credit_card_image"
        app:layout_constraintTop_toBottomOf="@+id/income_text" />

    <TextView
        android:id="@+id/balance_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/gutterSpaceHalf"
        android:layout_marginTop="@dimen/gutterSpaceHalf"
        android:text="@string/available_balance"
        app:layout_constraintStart_toEndOf="@+id/credit_card_image"
        app:layout_constraintTop_toBottomOf="@+id/expenses_text" />

    <TextView
        android:id="@+id/income_amount_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/gutterSpace"
        android:layout_marginTop="@dimen/gutterSpace"
        tools:text="R20 000"
        android:gravity="end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/balance_text"
        app:layout_constraintTop_toBottomOf="@+id/transaction_summary_text" />

    <TextView
        android:id="@+id/expenses_amount_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/gutterSpace"
        android:layout_marginTop="@dimen/gutterSpaceHalf"
        tools:text="R5 000"
        android:gravity="end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/balance_text"
        app:layout_constraintTop_toBottomOf="@+id/income_amount_text" />

    <TextView
        android:id="@+id/balance_amount_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/gutterSpace"
        android:layout_marginTop="@dimen/gutterSpaceHalf"
        tools:text="R15 000"
        android:gravity="end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/balance_text"
        app:layout_constraintTop_toBottomOf="@+id/expenses_amount_text" />

</androidx.constraintlayout.widget.ConstraintLayout>